support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_redef.i
%module xxx

#define foo(a,x)      a+x
#define foo           4

/* Should not generate an error */
#define foo           4

